[package]
name = "gstats"
description = "Summarizes repositories under a directory for developers."
documentation = "https://github.com/boonshift/gstats"
homepage = "https://github.com/boonshift/gstats"
repository = "https://github.com/boonshift/gstats"
version = "0.1.4"
authors = ["Boon Hian Tek <boon.tek@gmail.com>"]
license = "Unlicense OR MIT"
edition = "2018"

[[bin]]
name = "gstats"

[dependencies]
colored = "1.9"
git2 = "0.8"
